# pdftollm

./: .gitignore  LICENSE  README.md  README_EN.md  build_exe.bat  build_setup.bat  installer.iss  pdfconverter.spec  pdfconverter_folder.spec  pyproject.toml
.github/workflows/: release.yml
locales/: en.json  pt-br.json
src/: __init__.py  main.py  update_checker.py
src/converters/: __init__.py  conversion_manager.py  pdf_converter.py  pdf_validator.py
src/gui/: __init__.py  about_dialog.py  main_window.py
src/i18n/: __init__.py  i18n_manager.py
src/models/: __init__.py  data_models.py  file_list_manager.py
src/ocr/: __init__.py  easyocr_engine.py  markdown_quality_detector.py  ocr_engine.py  ocr_manager.py  tesseract_engine.py
tests/smoke/: __init__.py
tests/unit/: conftest.py  test_about_dialog.py  test_conversion_manager.py  test_file_list_manager.py  test_i18n_manager.py  test_main_window.py  test_markdown_quality_detector.py  test_ocr_engines.py  test_ocr_manager.py  test_pdf_converter.py  test_pdf_validator.py  test_property_assets_subfolder.py  test_property_batch_invariant.py  test_property_encoding.py  test_property_file_list_manager.py  test_property_filename_transform.py  test_property_filename_truncation.py  test_property_i18n_catalog.py  test_property_i18n_locale_switch.py  test_property_i18n_persistence.py  test_property_illegible_detection.py  test_property_image_naming.py  test_property_image_references.py  test_property_no_image_artifacts.py  test_property_no_subfolder_without_images.py  test_property_ocr_fallback.py  (+4 more)
(+4 files in other folders)
